Complete Testing of Post Feature using Swagger UI
